# alfa_hack_cred

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.gpu  EXPERIMENTS.md  LAUNCH.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: tests.yml
artifacts/record/: a_side_record11.parquet  b_keys.parquet  b_pct_bblend.npy  b_pct_mlp.npy  b_side_ball.parquet  manifest.json
configs/: baseline_lgbm.yaml  lgbm_extended.yaml  lgbm_optuna.yaml
notebooks/: 01_eda.ipynb  01_eda.py  EDA_FINDINGS.md  INTERPRETATION.md
scripts/: explain.py  fit_pipeline.py  make_final_submission.py  make_record_blend.py  make_record_submission.py  make_submission.py  predict.py  reproduce_record.py  train.py  tune.py  verify_submission.py
src/alfa_cred/: __init__.py  blending.py  blends.py  config.py  inference.py  interpret.py  io_utils.py  metrics.py  subtasks.py  tracking.py  training.py  tuning.py  two_stage.py  utils.py  validation.py
src/alfa_cred/features/: __init__.py  basic.py  basket.py  client.py  group.py  match.py  offer_v3.py  pipeline.py  target_enc.py  time.py
src/alfa_cred/models/: __init__.py  a_blend.py  b_ball.py  b_blend.py  catboost_ranker.py  lgbm_ranker.py  mlp_pointwise.py  mlp_ranker.py  record_b_blend.py  xgb_ranker.py
tests/: conftest.py  test_match_features.py  test_metrics.py  test_submission.py  test_two_stage.py
