[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfa_cred"
version = "0.1.0"
description = "Ранжирование кредитных предложений по NDCG@5"
requires-python = ">=3.11,<3.12"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
